# nv-protocol

./: .gitignore  README.md  SPECIFICATION.md  audit.py  bin_redirect.js  build_binary.py  ca.py  fix_line_endings.py  git.py  install.sh  nv.py  nvenv.cmd  package.json  policy.py  proxy.py  pyproject.toml  run_demo.py  runner.py  setup_and_run_demo.py  startup_ecosystem_blueprint.md  test_nv.py  vault.py  winget-manifest.yaml
.github/workflows/: publish-pypi.yml  publish-winget.yml  publish.yml
docs/: custom_uri_keys.md
manifests/s/SarveshSonkusre/nv-protocol/2.0.0/: SarveshSonkusre.nv-protocol.installer.yaml  SarveshSonkusre.nv-protocol.locale.en-US.yaml  SarveshSonkusre.nv-protocol.yaml
nv_protocol.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
py_wrapper/: bin_redirect.js  ca.py  cli.py  git.py  nv.py  policy.py  proxy.py  runner.py  vault.py
