[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nv-protocol"
version = "0.1.0"
description = "Context-Isolated Secret Management for Autonomous AI Software Engineering Agents"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Open-Source Software Security Initiative"}
]
keywords = ["security", "credentials", "secret-manager", "ai-agents", "llm"]

[project.urls]
Homepage = "https://github.com/SarveshSonkusre02/nv-protocol"

[project.scripts]
nvenv = "py_wrapper.cli:main" # This registers the 'nvenv' command globally on pip install

[tool.setuptools]
packages = ["py_wrapper"]
include-package-data = true