[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nv-protocol"
version = "2.0.3"
description = "Context-Isolated Secret Management for Autonomous AI Software Engineering Agents"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [
    { name = "Open-Source Software Security Initiative" }
]

keywords = [
    "security",
    "credentials",
    "secret-manager",
    "ai-agents",
    "llm"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Security"
]

[project.urls]
Homepage = "https://github.com/SarveshSonkusre02/nv-protocol"
Repository = "https://github.com/SarveshSonkusre02/nv-protocol"
Issues = "https://github.com/SarveshSonkusre02/nv-protocol/issues"

[project.scripts]
nvenv = "py_wrapper.cli:main"

[tool.setuptools]
packages = ["py_wrapper"]
include-package-data = true

[tool.setuptools.package-data]
py_wrapper = [
    "bin_redirect.js"
]